--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Tools</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>These are the key tools and technologies I specialize in, enabling me to analyze, visualize, and manage data effectively. From business intelligence platforms like Power BI and Tableau to data management with SQL Server and automation with Power Automate, my expertise allows me to create impactful solutions. Additionally, I leverage GIS tools like QGIS and data collection platforms such as Kobo Toolbox to support humanitarian and data-driven decision-making.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
