--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
+        <li><a href="#home" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
@@ -70,7 +70,7 @@
   <main class="main">
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background">
+    <section id="home" class="hero section dark-background">
 
       <img src="assets/img/cv.jpg" alt="" data-aos="fade-in" class="">
 
@@ -104,7 +104,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://cesarvera66.github.io/portfolio_cesarvera/</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>cesarvera66.github.io/portfolio_cesarvera/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+50766306663</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Panama, Panama</span></li>
                 </ul>
