--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Cesar Vera Portfolio</title>
-  <meta content="Portfolio de Cesar Vera, Profesional en Gestión de Datos e Información" name="description">
-  <meta content="portfolio, uiux, web, design, data, information management" name="keywords">
+  
+  <!-- Title -->
+  <title>Cesar Vera - Data & Information Management Portfolio</title>
+  
+  <!-- Meta Description (SEO) -->
+  <meta name="description" content="Portfolio de Cesar Vera, especialista en Visualización de Datos, Análisis de Información y Gestión de Datos Humanitarios. Explora mis proyectos en Power BI, Tableau, SQL Server y más.">
+  
+  <!-- Keywords (SEO) -->
+  <meta name="keywords" content="Portfolio, data visualization, business intelligence, GIS, SQL, Power BI, Tableau, information management, humanitarian data, UI/UX, web development">
+  
+  <!-- Author -->
+  <meta name="author" content="Cesar Vera">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -40,8 +49,7 @@
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <!-- Uncomment the line below if you also wish to use an image logo -->
-      <!-- <img src="assets/img/logo.png" alt=""> -->
+
       <h1 class="sitename">Cesar Vera</h1>
     </a>
 
@@ -59,8 +67,8 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Interests</a></li>
-        <li><a href="#testimonials"><i class="bi bi-menu-button navicon"></i> <span>References</a></li>
+        <li><a href="#interests"><i class="bi bi-hdd-stack navicon"></i> Interests</a></li>
+        <li><a href="#references"><i class="bi bi-menu-button navicon"></i> <span>References</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
@@ -104,7 +112,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>cesarvera66.github.io/portfolio_cesarvera/</span></li>
+                  <li><i class="bi bi-chevron-right"></i><strong>Website:</strong><span><a href="https://cesarvera66.github.io/portfolio_cesarvera/" target="_blank" rel="noopener noreferrer">Visit my portfolio</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+50766306663</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Panama, Panama</span></li>
                 </ul>
@@ -346,7 +354,7 @@
               </p>  
               <br/> 
           </div>
-            <h3 class="resume-title">Educación</h3>
+            <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Master’s Degree in Project Management</h4>
               <h5>Currently Studying</h5>
@@ -368,7 +376,7 @@
           </div>
           <!-- Right Column: Experiencia Profesional -->
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Experiencia Profesional</h3>
+            <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Data Management Consultant</h4>
               <h5>11/2024 - Present</h5>
@@ -593,8 +601,8 @@
 
     </section><!-- /Portfolio Section -->
 
-    <!-- Services Section -->
-    <section id="services" class="services section">
+    <!-- Interests Section -->
+    <section id="interests" class="services section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -659,10 +667,10 @@
 
       </div>
 
-    </section><!-- /Services Section -->
+    </section><!-- /Ineterests Section -->
 
     <!-- Testimonials Section -->
-    <section id="testimonials" class="testimonials section light-background">
+    <section id="references" class="testimonials section light-background">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
