--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <main class="main">
 
-    <!-- Hero Section -->
+    <!-- Home Section -->
     <section id="home" class="hero section dark-background">
 
       <img src="assets/img/cv.jpg" alt="" data-aos="fade-in" class="">
@@ -87,53 +87,51 @@
         <p>I'm a <span class="typed" data-typed-items="Data Analyst, Data Visualization Specialist, Systems Analyst, Programmer, Humanitarian Worker">Data</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
-    </section><!-- /Hero Section -->
+    </section><!-- /Home Section -->
 
     <!-- About Section -->
-    <section id="about" class="about section">
+<section id="about" class="about section">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>About</h2>
-        <p>Data Analyst, enthusiastic and team-oriented professional with a track record of over 11 years in the humanitarian sector. I have accumulated more than 6 years of specialized experience in information management for disaster response, covering the entire data lifecycle—from collection to visualization and analysis—all aimed at supporting strategic decision-making.</p>
-      </div><!-- End Section Title -->
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>About</h2>
+    <p>Data Analyst, enthusiastic and team-oriented professional with a track record of over 11 years in the humanitarian sector. I have accumulated more than 6 years of specialized experience in information management for disaster response, covering the entire data lifecycle—from collection to visualization and analysis—all aimed at supporting strategic decision-making.</p>
+  </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row gy-4 justify-content-center">
-          <div class="col-lg-4">
-            <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="">
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <div class="row gy-4 justify-content-center">
+      <div class="col-lg-12 content"> <!-- Se cambió de col-lg-8 a col-lg-12 para ocupar todo el ancho -->
+        <h2>Data Management &amp; Information Professional</h2>
+        <p class="fst-italic py-3">
+          I combine creativity, analysis, and technology to optimize information management and support decision-making.
+        </p>
+        <div class="row">
+          <div class="col-md-6"> <!-- Se cambió col-lg-6 a col-md-6 para mejor respuesta en pantallas pequeñas -->
+            <ul>
+              <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> 
+                <span><a href="https://cesarvera66.github.io/portfolio_cesarvera/" target="_blank" rel="noopener noreferrer">Visit my portfolio</a></span>
+              </li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+507 6630 6663</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Panama, Panama</span></li>
+            </ul>
           </div>
-          <div class="col-lg-8 content">
-            <h2>Data Management &amp; Information Professional</h2>
-            <p class="fst-italic py-3">
-              I combine creativity, analysis, and technology to optimize information management and support decision-making.
-            </p>
-            <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i><strong>Website:</strong><span><a href="https://cesarvera66.github.io/portfolio_cesarvera/" target="_blank" rel="noopener noreferrer">Visit my portfolio</a></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+50766306663</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Panama, Panama</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Bachelor's Degree:</strong> <span>Systems Analysis and Computer Programming</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>cesarvera6@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Languages:</strong> <span>Spanish, English and Guarani</span></li>
-                </ul>
-              </div>
-            </div>
-            <p class="py-3">
-              Extensive experience in data collection, processing, and visualization using tools like Kobo, Power BI, Tableau, and QGIS. Proven ability to lead data-driven projects in humanitarian contexts, supporting National Societies and international teams in disaster response, risk reduction, and emergency management.
-            </p>
+          <div class="col-md-6">
+            <ul>
+              <li><i class="bi bi-chevron-right"></i> <strong>Bachelor's Degree:</strong> <span>Systems Analysis and Computer Programming</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>cesarvera6@gmail.com</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Languages:</strong> <span>Spanish, English, and Guarani</span></li>
+            </ul>
           </div>
         </div>
-
+        <p class="py-3">
+          Extensive experience in data collection, processing, and visualization using tools like Kobo, Power BI, Tableau, and QGIS. Proven ability to lead data-driven projects in humanitarian contexts, supporting National Societies and international teams in disaster response, risk reduction, and emergency management.
+        </p>
       </div>
+    </div>
+  </div>
 
-    </section><!-- /About Section -->
+</section><!-- /About Section -->
+
 
     <!-- Stats Section -->
     <section id="stats" class="stats section">
@@ -181,86 +179,94 @@
     </section><!-- /Stats Section -->
 
     <!-- Skills Section -->
-    <section id="skills" class="skills section light-background">
+<section id="skills" class="skills section light-background">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Tools</h2>
-        <p>These are the key tools and technologies I specialize in, enabling me to analyze, visualize, and manage data effectively. From business intelligence platforms like Power BI and Tableau to data management with SQL Server and automation with Power Automate, my expertise allows me to create impactful solutions. Additionally, I leverage GIS tools like QGIS and data collection platforms such as Kobo Toolbox to support humanitarian and data-driven decision-making.</p>
-      </div><!-- End Section Title -->
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Tools</h2>
+    <p>These are the key tools and technologies I specialize in, enabling me to analyze, visualize, and manage data effectively. From business intelligence platforms like Power BI and Tableau to data management with SQL Server and automation with Power Automate, my expertise allows me to create impactful solutions. Additionally, I leverage GIS tools like QGIS and data collection platforms such as Kobo Toolbox to support humanitarian and data-driven decision-making.</p>
+  </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <div class="row skills-content skills-animation">
 
-        <div class="row skills-content skills-animation">
+      <div class="col-lg-6">
 
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill"><span>POWER BI / TABLEAU</span> <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>SQL SERVER</span> <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>HTML, CSS & JavaScript</span> <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>Excel</span> <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
+        <div class="progress">
+          <span class="skill">POWER BI / TABLEAU <i class="val">100%</i></span>
+          <div class="progress-bar-wrap" data-bs-toggle="tooltip" data-bs-placement="top" 
+               title="Advanced: 81% - 100% (Mastery of the tool, ability to optimize processes and teach others)">
+            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
+        </div>
 
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill"><span>PYTHON</span> <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>Kobo Toolbox & ODK</span> <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>POWER AUTOMATE</span> <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-            <div class="progress">
-              <span class="skill"><span>QGIS</span> <i class="val">70%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
+        <div class="progress">
+          <span class="skill">SQL SERVER <i class="val">90%</i></span>
+          <div class="progress-bar-wrap" data-bs-toggle="tooltip" data-bs-placement="top" 
+               title="Advanced: 81% - 100% (Mastery of the tool, ability to optimize processes and teach others)">
+            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
+        </div>
 
+        <div class="progress">
+          <span class="skill">HTML, CSS & JavaScript <i class="val">75%</i></span>
+          <div class="progress-bar-wrap" data-bs-toggle="tooltip" data-bs-placement="top" 
+               title="Intermediate: 51% - 80% (Frequent use, ability to solve problems and apply knowledge)">
+            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
+
+        <div class="progress">
+          <span class="skill">Excel <i class="val">90%</i></span>
+          <div class="progress-bar-wrap" data-bs-toggle="tooltip" data-bs-placement="top" 
+               title="Advanced: 81% - 100% (Mastery of the tool, ability to optimize processes and teach others)">
+            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
         </div>
 
       </div>
 
-    </section><!-- /Skills Section -->
+      <div class="col-lg-6">
+
+        <div class="progress">
+          <span class="skill">PYTHON <i class="val">80%</i></span>
+          <div class="progress-bar-wrap" data-bs-toggle="tooltip" data-bs-placement="top" 
+               title="Intermediate: 51% - 80% (Frequent use, ability to solve problems and apply knowledge)">
+            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
+
+        <div class="progress">
+          <span class="skill">Kobo Toolbox & ODK <i class="val">100%</i></span>
+          <div class="progress-bar-wrap" data-bs-toggle="tooltip" data-bs-placement="top" 
+               title="Advanced: 81% - 100% (Mastery of the tool, ability to optimize processes and teach others)">
+            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
+
+        <div class="progress">
+          <span class="skill">POWER AUTOMATE <i class="val">75%</i></span>
+          <div class="progress-bar-wrap" data-bs-toggle="tooltip" data-bs-placement="top" 
+               title="Intermediate: 51% - 80% (Frequent use, ability to solve problems and apply knowledge)">
+            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
+
+        <div class="progress">
+          <span class="skill">QGIS <i class="val">70%</i></span>
+          <div class="progress-bar-wrap" data-bs-toggle="tooltip" data-bs-placement="top" 
+               title="Intermediate: 51% - 80% (Frequent use, ability to solve problems and apply knowledge)">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+
+</section><!-- /Skills Section -->
+
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume section">
@@ -872,6 +878,13 @@
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <!-- Activar Tooltips -->
+<script>
+  var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+  var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+    return new bootstrap.Tooltip(tooltipTriggerEl);
+  });
+</script>
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
