--- a/index.html
+++ b/index.html
@@ -510,6 +510,7 @@
             <li data-filter=".filter-app">Dashboards</li>
             <li data-filter=".filter-product">Maps</li>
             <li data-filter=".filter-branding">Website</li>
+            <li data-filter=".filter-scripts">Scripts</li> 
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
@@ -617,6 +618,19 @@
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-scripts">
+              <div class="portfolio-content h-100">
+                  <img src="assets/img/portfolio/python-script.png" class="img-fluid" alt="">
+                  <div class="portfolio-info">
+                      <h4>Excel to SQL Upload Script</h4>
+                      <p>A Python script to automate the process of uploading Excel files to SQL Server.</p>
+                      <a href="assets/img/portfolio/python-script.png" title="Excel to SQL Upload Script" data-gallery="portfolio-gallery-scripts" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                      <a href="https://github.com/cesarvera66/Migrate-Excel-to-SQLServer" title="Download Script" class="details-link"><i class="bi bi-download"></i></a>
+                  </div>
+              </div>
+          </div><!-- End Portfolio Item -->
+          
 
           </div><!-- End Portfolio Container -->
 
@@ -910,5 +924,5 @@
 
 </body>
 
-        
+
 </html>
