--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Cesar Vera</h2>
-        <p>I'm a <span class="typed" data-typed-items="Data Analyst, Data Visualization Specialist, Systems Analyst, Programmer, Humanitarian Worker">Data</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>I'm a <span class="typed" data-typed-items="Data Analyst..., Data Visualization Specialist..., Systems Analyst..., Programmer..., Humanitarian Worker.">Data</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Home Section -->
@@ -306,11 +306,30 @@
           <h5>11/2024 - Present</h5>
           <p><em>International Organization for Migration (IOM) - Panama City, Panama</em></p>
           <ul>
-            <li><b>Script Development:</b> Designed and implemented a Python script for data cleaning and upload to SQL Server with a graphical interface.</li>
-            <li><b>Process Optimization:</b> Migrated activities from an Excel file to Microsoft Planner, structuring tasks for better workflow management.</li>
-            <li><b>Automation in Power Automate:</b> Configured an automated flow to synchronize data between Microsoft Planner and Power BI.</li>
-            <li><b>Power BI Dashboard:</b> Developed an interactive dashboard for real-time activity tracking, improving visibility and process control.</li>
-            <li><b>Data Processing &amp; Cleaning:</b> Created scripts for cleaning country datasets and uploading them to respective country databases.</li>
+            <li>
+              Designed and optimized a regional database in <strong>SQL Server</strong>,
+              restructuring standard tables to improve query performance and survey analysis collected from more than 
+              <strong>20 geographic locations in 8 countries</strong> during 2024.
+          </li>
+          <li>
+              Designed and optimized a <strong>general table in SQL Server</strong>, consolidating data from multiple tables 
+              to structure and enhance query performance and information analysis from multiple countries in 2024.
+          </li>
+          <li>
+              Implemented an automated workflow for validation, cleaning, and data loading through a 
+              <strong>Python script with a graphical interface</strong>, reducing errors and accelerating SQL Server integration.
+          </li>
+          <li>
+              Migrated activities from <strong>Excel to Microsoft Planner</strong>, improving task structuring and workflow management.
+          </li>
+          <li>
+              Configured a work plan in <strong>Microsoft Planner</strong> with visualization in <strong>Power BI</strong> and 
+              automated workflows in <strong>Power Automate</strong>, improving task coordination and tracking.
+          </li>
+          <li>
+              Implemented <strong>monitoring dashboards</strong> and validation for survey implementation and migration flow registration in 
+              <strong>KoboToolbox</strong>, with connection <strong>via API with Power BI</strong>.
+          </li>
           </ul>
         </div>
         <div class="resume-item">
@@ -318,12 +337,32 @@
           <h5>02/2024 - 11/2024</h5>
           <p><em>International Federation of the Red Cross (IFRC) - Panama City, Panama</em></p>
           <ul>
-            <li><b>Data &amp; Information Management:</b> Supported data management for decision-making and reporting in emergency operations.</li>
-            <li><b>Information Product Development:</b> Created maps, infographics, and dashboards for the Central America CCD team and National Red Cross Societies.</li>
-            <li><b>Data Collection &amp; Monitoring:</b> Assisted in the collection, review, and monitoring of data from emergency response programs.</li>
-            <li><b>Data Visualization Systems:</b> Designed visualization systems using Power BI and Tableau.</li>
-            <li><b>Dashboard Development:</b> Developed dashboards for monitoring emergency operations and regional migration flows.</li>
-            <li><b>Training &amp; Capacity Building:</b> Provided training on mobile data collection tools such as Kobo and ODK.</li>
+            <li>
+              Developed a <strong>regional dashboard</strong> for monitoring humanitarian assistance and estimating migration flows from 
+              <strong>5 Central American countries</strong>.
+          </li>
+          <li>
+              Implemented an <strong>information assistance point for migrants</strong> in the <strong>Darién</strong> region, Panama, 
+              facilitating access to satellite internet and establishing feedback systems.
+          </li>
+          <li>
+              Managed data and information for decision-making in various <strong>emergency operations and humanitarian programs</strong>, 
+              strengthening National Societies capacities in the subregion.
+          </li>
+          <li>
+              <strong>Facilitated training</strong> for information management teams in Costa Rica and Panama on <strong>HIAC</strong> certifications, 
+              mobile data collection tools such as <strong>Kobo Toolbox and ODK</strong>, and served as a <strong>mentor</strong> for the first 
+              "Regional Information Management Team for Emergency Deployment" program.
+          </li>
+          <li>
+              Participated in a <strong>multisectoral assessment in Darién</strong>, providing <strong>recommendations for improvement</strong> 
+              in the collection, analysis, and visualization of data on services and activities carried out by the 
+              <strong>Red Cross Panama in that area</strong>.
+          </li>
+          <li>
+              <strong>SIMS Coordinator</strong> in the <strong>Hurricane Beryl</strong> response, leading the coordination of remote support 
+              for information management, providing assistance in data processing, analysis, and visualization.
+          </li>
           </ul>
         </div>
         <div class="resume-item">
@@ -331,14 +370,24 @@
           <h5>08/2023 - 02/2024</h5>
           <p><em>Tigo Panama - Panama City, Panama</em></p>
           <ul>
-            <li>Coordinated with business teams to establish and maintain Control Frameworks for Revenue Assurance.</li>
-            <li>Developed automated tools for analyzing trends, variations, and potential losses.</li>
-            <li>Designed custom alarms and controls in SQL Server to monitor trends.</li>
-            <li>Conducted continuous monitoring and analysis of alarms to prevent revenue loss.</li>
-            <li>Led the execution and improvement of IC, SOX, and KPI controls.</li>
-            <li>Ensured data reconciliations across servers were accurate and complete.</li>
-            <li>Participated in database migrations ensuring complete data integrity.</li>
-            <li>Developed dashboards for tracking revenue from roaming and electronic recharges.</li>
+            <li>
+              Coordinated with business teams to establish and maintain <strong>control processes</strong> for revenue assurance.
+          </li>
+          <li>
+              Developed <strong>automated tools for trend, variance, and loss analysis in Revenue Assurance</strong>.
+          </li>
+          <li>
+              Designed and programmed <strong>controls in SQL Server</strong> to monitor anomalies.
+          </li>
+          <li>
+              Implemented <strong>dashboards in Power BI</strong> for tracking revenues from roaming and electronic top-ups.
+          </li>
+          <li>
+              Participated in <strong>database migrations</strong>, ensuring data integrity and accuracy during the transfer process.
+          </li>
+          <li>
+              Led the execution and improvement of <strong>IC, SOX, and KPI</strong> controls.
+          </li>
           </ul>
         </div>
         <div class="resume-item">
@@ -346,12 +395,22 @@
           <h5>01/2023 - 06/2023 (Full-time) / 01/2022 - 12/2022 (Part-time)</h5>
           <p><em>American Red Cross - Panama City, Panama</em></p>
           <ul>
-            <li>Led Information Management support for Latin America &amp; The Caribbean Division.</li>
-            <li>Provided comprehensive support to projects in Guatemala, Honduras, El Salvador, Mexico, and Colombia.</li>
-            <li>Documented data flows and developed guidance materials for seamless data management.</li>
-            <li>Managed Cash Information Management activities for cash assistance support.</li>
-            <li>Provided remote support to IFRC Operations (Surge Information Management Support).</li>
-            <li>Developed an interactive dashboard to monitor the LAC Portfolio for effective decision-making.</li>
+            <li>
+              Led <strong>information management (IM) support</strong> for the Latin America and Caribbean Division, ensuring the efficient handling of data and information.
+          </li>
+          <li>
+              Provided comprehensive information management support to <strong>multiple countries with ongoing projects</strong>, including 
+              <strong>Guatemala, Honduras, El Salvador, Mexico, and Colombia</strong>.
+          </li>
+          <li>
+              Documented data and information flows, developing training materials to facilitate <strong>data exchange and efficient management</strong>.
+          </li>
+          <li>
+              <strong>Developed an interactive and user-friendly dashboard</strong> to monitor the <strong>LAC Portfolio</strong>, providing an overview of projects, financial status, key indicators, and relevant data for decision-making and progress tracking.
+          </li>
+          <li>
+              <strong>Developed dashboards for monitoring humanitarian assistance and emergency response</strong>, enabling real-time analysis and facilitating strategic decision-making.
+          </li>
           </ul>
         </div>
         <div class="resume-item">
@@ -359,11 +418,27 @@
           <h5>12/2020 - 12/2022</h5>
           <p><em>International Federation of the Red Cross (IFRC) - Panama City, Panama</em></p>
           <ul>
-            <li>Managed Information Management for the Health Department of the Americas Regional Office.</li>
-            <li>Supported data collection, analysis, and dissemination during the COVID-19 outbreak.</li>
-            <li>Designed a Regional Immunization Dashboard tracking 14 vaccines over 20 years.</li>
-            <li>Developed a dashboard for regional COVID-19 immunization coverage monitoring.</li>
-            <li>Deployed as Rapid Response personnel to Budapest for emergency support in Ukraine.</li>
+            <li>
+              Coordinated information management for the <strong>health, water, hygiene, and sanitation</strong> department, 
+              ensuring quality and analysis in response reports to the <strong>COVID-19</strong> pandemic.
+          </li>
+          <li>
+              Designed a <strong>monitoring dashboard for global COVID-19 risk levels</strong>, based on a matrix of key epidemiological indicators.
+          </li>
+          <li>
+              <strong>Developed a regional monitoring dashboard</strong> for the <strong>COVID-19</strong> response, 
+              visualizing the implementation of measures across multiple countries.
+          </li>
+          <li>
+              Developed a <strong>regional immunization dashboard</strong> to track <strong>14 vaccines in 33 countries</strong> over the past <strong>20 years</strong>.
+          </li>
+          <li>
+              Deployed as <strong>rapid response personnel</strong> in Honduras to support the <strong>information management strategy coordination</strong> 
+              in response to <strong>Eta/Iota</strong>.
+          </li>
+          <li>
+              Deployed as <strong>rapid response personnel in Budapest, Hungary</strong>, to support the emergency operation in Ukraine.
+          </li>
           </ul>
         </div>
         <div class="resume-item">
